--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kawser Apu — Profile</title>
+<title>Kawser MC — Profile</title>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
   *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
@@ -366,7 +366,7 @@
       <div class="icon">👤</div>
       <div>
         <div class="info-label">Full Name</div>
-        <div class="info-value">Kawser Apu</div>
+        <div class="info-value">Kawser MC</div>
       </div>
     </div>
 
@@ -374,7 +374,7 @@
       <div class="icon">🎂</div>
       <div>
         <div class="info-label">Age</div>
-        <div class="info-value">16+ Years Old</div>
+        <div class="info-value">16sex+ Years Old</div>
       </div>
     </div>
 
@@ -416,3 +416,4 @@
 </script>
 </body>
 </html>
+
