--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       <div class="badge">✦ Profile Card ✦</div>
     </div>
 
-    <div class="name">Kawser Apu</div>
+    <div class="name">Kawser VODAI</div>
     <div class="divider"></div>
 
     <div class="info-row">
@@ -416,4 +416,5 @@
 </script>
 </body>
 </html>
+
 
