--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Kawser MC — Profile</title>
+<title>RAFU MC — Profile</title>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
   *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
@@ -354,19 +354,19 @@
   <div class="card">
     <div class="avatar-section">
       <div class="avatar-ring">
-        <div class="avatar-inner">KA</div>
+        <div class="avatar-inner">MC</div>
       </div>
-      <div class="badge">✦ Profile Card ✦</div>
+      <div class="badge">✦ SAWWA Card ✦</div>
     </div>
 
-    <div class="name">Kawser VODAI</div>
+    <div class="name">RAFU VODAI</div>
     <div class="divider"></div>
 
     <div class="info-row">
       <div class="icon">👤</div>
       <div>
         <div class="info-label">Full Name</div>
-        <div class="info-value">Kawser MC</div>
+        <div class="info-value">RAFU BAINXOT</div>
       </div>
     </div>
 
@@ -380,10 +380,10 @@
 
     <div class="special-row">
       <div class="special-label">⚡ Identity</div>
-      <div class="special-value">I Am Also Madrasot 🕌</div>
+      <div class="special-value">I Am Also MAIGGA 🕌</div>
     </div>
 
-    <div class="footer">✦ &nbsp; Made with ❤️ &nbsp; ✦</div>
+    <div class="footer">✦ &nbsp; Made with jelly officer ❤️ &nbsp; ✦</div>
   </div>
 </div>
 
@@ -416,5 +416,6 @@
 </script>
 </body>
 </html>
+
 
 
