--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>RAFU MC — Profile</title>
+<title>JIHAD MC — Profile</title>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
   *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
@@ -359,14 +359,14 @@
       <div class="badge">✦ SAWWA Card ✦</div>
     </div>
 
-    <div class="name">RAFU VODAI</div>
+    <div class="name">JIHAD VODAI</div>
     <div class="divider"></div>
 
     <div class="info-row">
       <div class="icon">👤</div>
       <div>
         <div class="info-label">Full Name</div>
-        <div class="info-value">RAFU BAINXOT</div>
+        <div class="info-value">JIHAD BAINXOT</div>
       </div>
     </div>
 
@@ -416,6 +416,7 @@
 </script>
 </body>
 </html>
+
 
 
 
