--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>JIHAD MC — Profile</title>
+<title>ASIF GOOD BOY  — Profile</title>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Outfit:wght@300;400;600;800&display=swap" rel="stylesheet">
 <style>
   *, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
@@ -354,19 +354,19 @@
   <div class="card">
     <div class="avatar-section">
       <div class="avatar-ring">
-        <div class="avatar-inner">MC</div>
+        <div class="avatar-inner"ASIF</div>
       </div>
-      <div class="badge">✦ SAWWA Card ✦</div>
+      <div class="badge">✦ love Card ✦</div>
     </div>
 
-    <div class="name">JIHAD VODAI</div>
+    <div class="name"ASIF LOVE YOU</div>
     <div class="divider"></div>
 
     <div class="info-row">
       <div class="icon">👤</div>
       <div>
         <div class="info-label">Full Name</div>
-        <div class="info-value">JIHAD BAINXOT</div>
+        <div class="info-value"ASIF </div>
       </div>
     </div>
 
@@ -374,13 +374,13 @@
       <div class="icon">🎂</div>
       <div>
         <div class="info-label">Age</div>
-        <div class="info-value">16sex+ Years Old</div>
+        <div class="info-value">15 Years Old</div>
       </div>
     </div>
 
     <div class="special-row">
       <div class="special-label">⚡ Identity</div>
-      <div class="special-value">I Am Also MAIGGA 🕌</div>
+      <div class="special-value">I Am Also GOOD🕌</div>
     </div>
 
     <div class="footer">✦ &nbsp; Made with jelly officer ❤️ &nbsp; ✦</div>
@@ -416,6 +416,7 @@
 </script>
 </body>
 </html>
+
 
 
 
